# rules_tf_apply

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel
.github/actions/setup-bazel/: action.yml  fingerprint.sh  install-bazelisk.sh
.github/actions/shutdown-bazel/: action.yml  external-marker-fingerprint.sh  external-prune.sh
.github/workflows/: ci.yml
lint/: BUILD.bazel
tf_apply/: BUILD.bazel  defs.bzl
tf_apply/rules/: BUILD.bazel  defs.bzl  tf_apply.sh  tf_cmd.sh  tf_destroy.sh  tf_init.sh  tf_plan.sh
tf_apply/tools/: BUILD.bazel
tools/: list_modules.py  list_modules_test.py  run.py  run_test.py
