load("@package_metadata//licenses:defs.bzl", "license")
load("@package_metadata//purl:purl.bzl", "purl")
load("@package_metadata//rules:package_metadata.bzl", "package_metadata")

package(
    default_package_metadata = ["//:package_metadata"],
    default_visibility = ["//visibility:public"],
)

package_metadata(
    name = "package_metadata",
    attributes = [
        ":license",
    ],
    purl = purl.bazel(
        module_name(),
        module_version(),
    ),
)

license(
    name = "license",
    kind = "@package_metadata//licenses/spdx:Apache-2.0",
)

filegroup(
    name = "standard_package",
    srcs =
        [
            ".bazelignore",
            "BUILD.bazel",
            "LICENSE",
            "MODULE.bazel",
        ],
    visibility = ["//distro:__pkg__"],
)
