exports_files(
    glob([
        "*.bzl",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "standard_package",
    srcs = glob([
        "*.bzl",
    ]) + [
        "BUILD.bazel",
    ],
    visibility = [
        "//distro:__pkg__",
        "//tf_apply:__pkg__",
    ],
)
